Fixed html and css validator errors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <title>About Me</title>
-  <meta charset="utf8">
+  <meta charset="utf-8">
 </head>
 <body>
 
@@ -53,8 +53,8 @@
     <ul class="projects">
       <li class="projects"><a href="#">Sports Website</a></li>
       <li class="projects"><a href="#">News Website</a></li>
-      <li class="projects"><a href="#">Blog Website<a/></li>
-      <li class="projects"><a href="#">Gadget Website<a/></li>
+      <li class="projects"><a href="#">Blog Website</a></li>
+      <li class="projects"><a href="#">Gadget Website</a></li>
     </ul>
   </main>
 
